# anilist-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/anilist_cli/: main.py
src/anilist_cli/libs/anilist/: adapter.py  anilist.py  auth_service.py  client.py  graphql_adapter.py  queries.py  service.py
src/anilist_cli/libs/anilist/models/: anime.py  anime_preview.py  complete_document.py  enums.py  filter.py  list_entry.py  list_entry_changes.py  list_entry_interface.py  manga.py  manga_preview.py  media.py  media_filter.py  media_format.py  media_genre.py  media_interface.py  media_list.py  media_list_entry.py  media_list_entry_changes.py  media_list_sort.py  media_list_status.py  media_preview.py  media_season.py  media_sort.py  media_status.py  media_title.py  media_type.py
src/anilist_cli/libs/anilist/queries/: get_expanded_media_info.graphql  get_media.graphql  get_media_list.graphql  get_user.graphql  update_entry.graphql
src/anilist_cli/libs/cache/: db.py  session_cache.py
src/anilist_cli/models/: cli_state.py
src/anilist_cli/ui/: app.py  runtime_state.py
src/anilist_cli/ui/screens/: login.py
src/anilist_cli/utils/: auth_util.py  common.py  inquirer_util.py  web_util.py
tests/anilist_cli/libs/anilist/: test_graphql_adapter.py
tests/anilist_cli/libs/anilist/models/: test_list_entry_changes.py  test_media_list_entry.py
tests/anilist_cli/utils/: test_auth_util.py  test_common.py
