[tool.poetry]
name = "anilist-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "anilist_cli", from = "src"}]

[tool.poetry.scripts]
anilist_cli = "anilist_cli.main:main"

[tool.poetry.dependencies]
python = "^3.13"
rich = "^13.9.3"
keyring = "^25.5.0"
inquirerpy = "^0.3.4"
pydantic = "^2.9.2"
aiohttp = "^3.10.10"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
