[project]
name = "anilist-cli"
version = "0.1.0"
description = "A CLI tool for browsing and managing your AniList anime/manga lists from the terminal."
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.10",
    "inquirerpy>=0.3.4",
    "keyring>=25.5.0",
    "pydantic>=2.9.2",
    "rich>=13.9.3",
]

[project.scripts]
anilist_cli = "anilist_cli.main:main"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.390",
    "pytest>=8.3.5",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anilist_cli"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
